yaml/nginxtemplate.yaml
apiVersion: v1
kind: Service
metadata:
  name: $NGINX-NAME
  namespace: default
  labels:
    app: $NGINX-LABEL
spec:
  ports:
  - name: http #customize if necessary
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: $APPNAME #app where traffic should be routed to
  type: ClusterIP
